Sep23/CKA/NetworkPolicy/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    tier: web
spec:
  containers:
  - name: web
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels:
    tier: app
spec:
  containers:
  - name: app
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    tier: db
spec:
  containers:
  - name: db
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
