Sep23/CKA/NetworkPolicy/dbsvc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    tier: db
  ports:
  - port: 80
    targetPort: 80
