Sep23/CKA/NetworkPolicy/allowapptodb.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apptodb
spec:
  podSelector:
    matchLabels:
      tier: db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: app
      ports:
        - port: 80
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webtoapp
spec:
  podSelector:
    matchLabels:
      tier: app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: web
      ports:
        - port: 80
          protocol: TCP
